# pounce

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-pounce.yml  release-pyomo-pounce.yml
benchmarks/: BENCHMARK_REPORT.json  BENCHMARK_REPORT.md  Makefile  README.md  benchmark_report.py  ipopt_ma57.provenance.json
benchmarks/cblib/: README.md
benchmarks/cho/: README.md  ipopt_ma57.json
benchmarks/cutest/: CUTEST_REPORT.md  Cargo.toml  README.md  build.rs  compare.py
benchmarks/cutest/src/: cutest_ffi.rs  cutest_problem.rs
benchmarks/electrolyte/: README.md  ipopt_ma57.json
benchmarks/gas/: README.md  ipopt_ma57.json
benchmarks/globallib/: run_globallib.py
benchmarks/grid/: README.md  ipopt_ma57.json
benchmarks/large_scale/: README.md  ipopt_ma57.json
benchmarks/lp/: README.md  generate_nl.py
benchmarks/lp_convex/: README.md
benchmarks/lpopt/: README.md  build_subset.py  ipopt_ma57.json  mps_to_nl.py
benchmarks/mittelmann/: README.md  ipopt_ma57.json
benchmarks/qp/: README.md  generate_nl.py  ipopt_ma57.json
benchmarks/qp_convex/: README.md
benchmarks/scripts/: compare_pounce_clarabel.py  run_nl_bench.sh
benchmarks/vanderbei/: README.md  cute_table_status.json  cute_table_status.py  ipopt_ma57.json
benchmarks/water/: README.md  ipopt_ma57.json
crates/pounce-algorithm/: Cargo.toml  README.md
crates/pounce-cinterface/: Cargo.toml  README.md
crates/pounce-cli/: Cargo.toml  README.md  build.rs
crates/pounce-cli/src/: builtin.rs  cbf.rs  check_x0.rs  citations.rs  cli.rs  counting_tnlp.rs  debug_repl.rs  dispatch.rs  lib.rs  main.rs  nl_external.rs  nl_fbbt_translate.rs  nl_hessian_program.rs  nl_reader.rs  nl_tape.rs  nl_writer.rs  print.rs  qp_extract.rs  solve_report.rs  tree_debug.rs  verify.rs
crates/pounce-cli/src/minima/: archive.rs  mod.rs
crates/pounce-cli/tests/: auxiliary_presolve.rs  cblib_cbf.rs  cblib_vs_nlp.rs  check_x0_subcommand.rs  dispatch_routing.rs  exp_cone_vs_nlp.rs  issue_49_external_funcs.rs  json_report.rs  l1_fallback_no_panic.rs  minima_sol_duals.rs  pounce_sens_end_to_end.rs  qp_dispatch_end_to_end.rs  qp_sens_dispatch.rs  qp_vs_nlp_iterations.rs  tree_debug_cli.rs
crates/pounce-cli/tests/data/cblib/: README.md
crates/pounce-cli/tests/fixtures/: .gitignore  convex_qp_sens.nl
crates/pounce-cli/tests/fixtures/aux_presolve/: README.md
crates/pounce-common/: Cargo.toml
crates/pounce-convex/: Cargo.toml  README.md
crates/pounce-feral/: Cargo.toml
crates/pounce-feral/src/: lib.rs
crates/pounce-global/: Cargo.toml  README.md
crates/pounce-global/src/: ad.rs  bnb.rs  debug.rs  envelope.rs  expr.rs  lib.rs  nlp.rs  obbt.rs  problem.rs  relax.rs  simplex_bridge.rs
crates/pounce-global/tests/: global.rs  tree_debug.rs
crates/pounce-hsl/: Cargo.toml  README.md  build.rs
crates/pounce-hsl/src/: ffi.rs  lib.rs  ma57.rs  mc19.rs  reg_op.rs
crates/pounce-hsl/tests/: t_sym_solver_ma57.rs
crates/pounce-l1penalty/: Cargo.toml  README.md
crates/pounce-l1penalty/src/: options.rs  wrapper.rs
crates/pounce-linalg/: Cargo.toml
crates/pounce-linalg/src/: blas1.rs  compound_matrix.rs  compound_vector.rs  dense_gen_matrix.rs  dense_sym_matrix.rs  dense_vector.rs  diag_matrix.rs  expansion_matrix.rs  lib.rs  low_rank_update_sym_matrix.rs  matrix.rs  multi_vector_matrix.rs  scaled_matrix.rs  special_matrix.rs  sum_matrix.rs  transpose_matrix.rs  triplet.rs  triplet_convert.rs  vector.rs
crates/pounce-linsol/: Cargo.toml  README.md
crates/pounce-nlp/: Cargo.toml
crates/pounce-nlp/src/: alg_types.rs  expression_provider.rs  ipopt_nlp.rs  lib.rs  newton_driver.rs  orig_ipopt_nlp.rs  return_codes.rs  solve_statistics.rs  tnlp.rs  tnlp_adapter.rs
crates/pounce-observability/: Cargo.toml  README.md
crates/pounce-presolve/: Cargo.toml  README.md
crates/pounce-py/: Cargo.toml  README.md
crates/pounce-qp/: Cargo.toml  README.md
crates/pounce-restoration/: Cargo.toml
crates/pounce-sensitivity/: Cargo.toml  README.md
crates/pounce-sensitivity/src/: algorithm_backsolver.rs  boundcheck.rs  convenience.rs  diff_handoff.rs  eigen.rs  lib.rs  p_calculator.rs  reduced_hessian.rs  schur_data.rs  schur_driver.rs  sens_app.rs  solver.rs  step_calc.rs
crates/pounce-sensitivity/tests/: adapter_trait_pipeline.rs  convenience_api.rs  parametric_cpp.rs  solver_session.rs
crates/pounce-solve-report/: README.md
crates/pounce-studio-core/: Cargo.toml
crates/pounce-studio-pyo3/: Cargo.toml  README.md
dev-notes/: auxiliary-equality-preprocessing.md  cargo-release.md  clarabel-parity.md  code-review-2026-06-followups-progress.md  code-review-progress.md  diff-handoff-contract.md  hsde.md  issue-200-plan.md  issue-49-ampl-external-functions.md  lp-qp-routing.md  mip-global-routing.md  multi-solver-tech-debt.md  pr70-hardening.md  pypi-release.md  release-v0.3.0-checklist.md  rosenbrock-iter-scaling.md  socp-extension.md  zenodo-setup.md
dev-notes/research/: active-set-sqp-warm-start.md  find-minima-global-search.md  narx-cfy-iteration-count.md
docs/: book.toml
docs/assets/: pounce.css  pounce.js
docs/src/: SUMMARY.md  acknowledgments.md  algorithm.md  auxiliary-presolve.md  benchmarks.md  bvp.md  choosing-a-solver.md  cli.md  convex-solver.md  curve-fitting.md  dae.md  debugger.md  find-minima-choosing.md  find-minima.md  global-optimization.md  initialization.md  installation.md  introduction.md  json-output.md  lp-qp-routing.md  ode.md  options.md  pyomo.md  python.md  quick-start.md  scaling.md  sensitivity.md  solution-output.md  trf.md  troubleshooting.md
docs/tutorials/: active-set-sqp.md
gams/: README.md  gams_pounce.c
pyomo-pounce/: README.md  pyproject.toml
pyomo-pounce/pyomo_pounce/: __init__.py  block_init.py  pounce_solver.py  repair.py  sens.py
pyomo-pounce/tests/: test_block_init.py  (+2 more)
python/: README.md  pyproject.toml
scripts/: publish-crates.sh
tools/iter-diff/: Cargo.toml
tools/iter-diff/src/: lib.rs  main.rs
tools/iter-diff/tests/: self_compare.rs
(+299 files in other folders)
