[package]
name = "pounce-cutest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "cutest_suite"
path = "src/bin/cutest_suite.rs"

[[bin]]
name = "kkt_compare"
path = "src/bin/kkt_compare.rs"
required-features = ["ma57"]

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-restoration.workspace = true
pounce-linsol.workspace = true
pounce-feral.workspace = true
pounce-hsl = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# Enable the HSL MA57 backend for benchmarks (requires libcoinhsl and
# turns on the matching feature in pounce-algorithm).
ma57 = ["dep:pounce-hsl", "pounce-algorithm/ma57"]
