[package]
name = "pounce-feral"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "FERAL pure-Rust sparse symmetric LDL^T backend for POUNCE. Implements pounce-linsol's SparseSymLinearSolverInterface."

[dependencies]
pounce-common = { path = "../pounce-common" }
pounce-linsol = { path = "../pounce-linsol" }
feral = "0.5.0"

[lints]
workspace = true
