[package]
name = "pounce-hsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "HSL linear-solver backend for POUNCE: MA57 via libcoinhsl.dylib (port of Ipopt's IpMa57TSolverInterface). Implements pounce-linsol's SparseSymLinearSolverInterface."
keywords = ["hsl", "ma57", "linear-solver", "ipopt", "sparse"]
categories = ["mathematics", "external-ffi-bindings"]
links = "coinhsl"
build = "build.rs"

[dependencies]
pounce-common.workspace = true
pounce-linsol.workspace = true

[dev-dependencies]
pounce-linalg.workspace = true

[lints]
workspace = true
