[package]
name = "pounce-l1penalty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Thierry-Biegler ℓ₁-exact penalty-barrier TNLP wrapper for POUNCE — opt-in NLP reformulation for degenerate / LICQ-violating NLPs (port of ripopt#23)."
keywords = ["l1-penalty", "nlp", "ipopt", "mpcc", "degenerate"]
categories = ["mathematics", "algorithms"]

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true

[lints]
workspace = true
