[package]
name = "pounce-sensitivity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Sensitivity analysis / parametric NLP warm-start / reduced Hessian for POUNCE — port of upstream Ipopt's sIPOPT contrib (Pirnay, López-Negrete, Biegler 2012)."
keywords = ["sipopt", "sensitivity", "nlp", "ipopt", "parametric"]
categories = ["mathematics", "algorithms", "science"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
pounce-algorithm.workspace = true
pounce-nlp.workspace = true

[lints]
workspace = true
