[package]
name = "iter-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bit-equivalence comparator for POUNCEIT iterate-trace files (Track-A validation of Ipopt → POUNCE port)."
# Internal dev tool; not for crates.io.
publish = false

[[bin]]
name = "iter-diff"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", optional = true }

[features]
default = []
json = ["serde_json"]

[lints]
workspace = true
